--- a/css/style.css
+++ b/css/style.css
@@ -601,20 +601,23 @@ h1, h2 {
 }
 
 /* Card Styles */
+.def-card {
+    min-height: 300px;
+}
+
 .expire-card {
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     transition: transform 0.3s;
-    margin-bottom: 2rem;
-    border: none;
     background-color: white;
+    height: 100%;
 }
-        
+
 .expire-card:hover {
     transform: translateY(-10px);
 }
-        
+
 .expire-card .card-title {
     color: #4CAF50;
     font-weight: bold;
@@ -623,14 +626,11 @@ h1, h2 {
     display: inline-block;
 }
 
-.def-card{
-    height: auto;
-}
-
-.def-card img{
-    height: 45vh;
-    width: 100%;
-    object-fit: cover;
+.expired-text{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
         
 /* Date type */
